# rote

./: Cargo.toml  README.md  flake.nix  justfile
examples/: sample.csv
src/: card.rs  fsrs.rs  lib.rs  main.rs  review.rs  web.rs
src/static/: review.js  style.css
tests/: integration.rs
